--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_MODE=production
+VITE_MODE= production
 
 VITE_API_URL_LOCAL=http://localhost:5000
-VITE_API_URL_PRODUCTION=https://iuris-back.vercel.app
+VITE_API_URL_PRODUCTION=https://iuris-back-production.up.railway.app
